--- a/sass/utilis/_variables.scss
+++ b/sass/utilis/_variables.scss
@@ -1,13 +1,12 @@
-$header-color: #2196F3;
-$header-transition: cubic-bezier(0.39, 0.575, 0.565, 1);
-$header-contact:#757575;
+$accent-color: #2196F3;
+$black-color: black;
+$transition: cubic-bezier(0.39, 0.575, 0.565, 1);
+$grey-color:#757575;
 $hero-box-shadow: #444242;
 $hero-button-color: #777784;
 $hero-background-color: #4e4b4b;
-$hero-transition: cubic-bezier(0.39, 0.575, 0.565, 1);
-$hero-color: #FFFFFF;
+$white-color: #FFFFFF;
 $modal-color: #188CE8;
-$modal-transition: cubic-bezier(0.39, 0.575, 0.565, 1);
 $qualities-color: #212121;
 $qualities-background-color: #F5F4FA;
 $team-color: #AFB1B8;
