--- a/sass/main.css
+++ b/sass/main.css
@@ -510,7 +510,7 @@ h1, h2, h3, h4, h5, h6, p {
   align-items: center;
 }
 
-.team-svg-item:hover .team-svg {
+.team-svg-item:hover .team-social__icon {
   fill: #FFFFFF;
 }
 
@@ -538,15 +538,6 @@ h1, h2, h3, h4, h5, h6, p {
   fill: #FFFFFF;
 }
 
-.team-list__item {
-  margin-left: 30px;
-  background: #FFFFFF;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  text-align: center;
-  padding-bottom: 30px;
-}
-
 .team-list {
   display: flex;
 }
@@ -557,6 +548,9 @@ h1, h2, h3, h4, h5, h6, p {
   border-radius: 0px 0px 4px 4px;
   text-align: center;
   padding-bottom: 30px;
+}
+.team-list__link {
+  fill: #AFB1B8;
 }
 
 .team-social {
