--- a/sass/utilis/_variables.scss
+++ b/sass/utilis/_variables.scss
@@ -2,11 +2,22 @@ $accent-color: #2196F3;
 $black-color: black;
 $transition: cubic-bezier(0.39, 0.575, 0.565, 1);
 $grey-color:#757575;
-$hero-box-shadow: #444242;
-$hero-button-color: #777784;
-$hero-background-color: #4e4b4b;
-$white-color: #FFFFFF;
-$modal-color: #188CE8;
-$qualities-color: #212121;
-$qualities-background-color: #F5F4FA;
-$team-color: #AFB1B8;
+$box-shadow: #444242;
+$button-color: #777784;
+$background-color: #4e4b4b;
+$bright-color: #FFFFFF;
+$accented-color: #188CE8;
+$color: #212121;
+$background-color-bright: #F5F4FA;
+$rain-color: #AFB1B8;
+$bit-bright: #ECECEC;
+$black-ground: #2F303A;
+$rgba-color: rgba(47, 48, 58, 0.8);
+$rgba-colorless: rgba(47, 48, 58, 0.4);
+$black-color-rgba: rgba(0, 0, 0, 0.2);
+$dark-rgba-color: rgba(33, 33, 33, 0.2);
+$darker-rgba-color: rgba(0, 0, 0, 0.15);
+$large-rgba-color: 0px 1px 1px rgba(0, 0, 0, 0.12),
+0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+$also-large-rgba-color: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+0px 2px 1px rgba(0, 0, 0, 0.2);
