--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,36 +1,25 @@
 .buttons-section .container {
-  background: #FFFFFF;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
+  @extend %container-display-flexes;
   margin-top: 94px;
   margin-bottom: 50px;
+  background: $bright-color;
 }
 
 .buttons-list {
   display: flex;
   flex-direction: row;
   justify-content: center;
-}
-
-.buttons-list__items {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 700;
-  line-height: 30px;
-  color: #212121;
-  padding: 6px 23px;
-  border-radius: 4px;
-  border: none;
-  margin-left: 8px;
-  border-radius: 4px 4px 4px 4px;
-  cursor: pointer;
-  transition: color 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 50ms;
-}
-
-.buttons-list__items:hover {
-  background-color: #2196F3;
-  color: #FFFFFF;
+  &__items {
+    @include text-filter(500, 16px, 30px, 0);
+    @include border(none, 4px);
+    padding: 6px 23px;
+    margin-left: 8px;
+    color: $color;
+    cursor: pointer;
+    transition: color 250ms $transition 50ms;
+    &:hover {
+      background-color: $accent-color;
+      color: $bright-color;
+    }
+  }
 }
