--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -1,62 +1,41 @@
 .client-section .container {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  background: #FFFFFF;
-  padding-bottom: 94px;
+  @include text-filter (700, 36px, 42px, 0.03em);
   padding-top: 94px;
+  padding-bottom: 94px;
+  background: $bright-color;
 }
 
 .client-list {
   display: flex;
+  &__item {
+    @extend %flex-center;
+    margin-left: 30px;
+  }
+  &__icon {
+    @include width-height(41px, 42.6px);
+    fill: $rain-color;
+    transition: fill 250ms $transition 25ms;
+  }
+  &__link {
+    @extend %flex-center;
+    @include border(1px solid $rain-color);
+    @include width-height(170px, 90px);
+    background-color: $bright-color;
+    transition: border 250ms $transition 100ms;
+    &:hover {
+      border: 1px solid $accent-color;
+    }
+  }
 }
 
 .client-list__item:hover .client-list__icon {
-  color: #2196F3;
-  fill: #2196F3;
+  color: $accent-color;
+  fill: $accent-color;
 }
 
 .client-section__title {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
+  @include text-filter (700, 36px, 42px, 0.03em);
   margin-bottom: 50px;
-}
-
-
-.client-list__item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 30px;
-}
-
-.client-list__icon {
-  width: 41px;
-  height: 42.6px;
-  fill: #AFB1B8;
-  transition: fill 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 25ms;
-}
-
-.client-list__link {
-  border: 1px solid #AFB1B8;
-  border-radius: 4px;
-  width: 170px;
-  height: 90px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #FFFFFF;
-  transition: border 250ms cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
-}
-
-.client-list__link:hover {
-  border: 1px solid #2196F3;
+  text-align: center;
+  color: $color;
 }
