--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,153 +1,110 @@
 .footer {
-  background: #2F303A;
-  font-family: 'Roboto';
+  background: $black-ground;
   font-weight: 700;
+  &__form {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
 }
-
-.footer-info__address {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  color: white;
-  margin-bottom: 9px;
-}
-
-.footer-list__contact {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  color: darkgrey;
-  transition: color 250ms cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
-}
-
-.footer-list__contact:hover {
-  color: #2196F3;
-}
-
-.footer-social__title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16.41px;
-  letter-spacing: 0.03em;
-  color: #FFFFFF;
-  margin-bottom: 20px;
-}
-
-.footer-social-list__icon {
-  width: 20px;
-  height: 20px;
-  fill: #FFFFFF;
-}
-
-.footer-social-list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-
-.footer-social-list__item {
-  width: 44px;
-  height: 44px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
-}
-
-.footer-social-list__item:hover {
-  background: #2196F3;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer-social__contact:hover {
-  color: #2196F3;
-}
-
-.footer-info__web {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 31px;
-  letter-spacing: 0.03em;
-  color: #2196F3;
-  margin-bottom: 20px;
-}
-
-.footer-social {
-  margin-left: 70px;
-}
-
-.footer-social {
-  margin-left: 70px;
-}
-
-.footer-info__logo {
-  font-family: 'Raleway';
-  color: #FFFFFF;
-}
-
-.footer-media-form__icon {
-  width: 24px;
-  height: 24px;
-  fill: #FFFFFF;
-  padding-left: 13px;
-}
-
-.footer-media {
-  margin-left: 93px;
-}
-
-.footer-media__text {
-  color: #FFFFFF;
-  font-family: 'Roboto';
-  margin-bottom: 20px;
-}
-
-.footer-media-form__input {
-  background: #2F303A;
-  border: 1px solid #FFFFFF4D;
-  width: 358px;
-  height: 50px;
-  margin-right: 10px;
-}
-
-.footer-media-form {
-  display: flex;
-}
-
-.footer-form {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.footer-media-form__button {
-  border: none;
-  background: #2196F3;
-  color: #FFFFFF;
-  width: 200px;
-  height: 50px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-left: 40px;
-}
-
 
 .footer-section .container {
   padding-top: 60px;
   padding-bottom: 60px;
   display: flex;
-  flex-wrap: wrap;
+}
+
+.footer-list {
+  &__item {
+    margin-bottom: 9px;
+  }
+  &__contact {
+    @include text-filter (400, 14px, 24px, 0.03em);
+    color: $grey-color;
+    transition: color 250ms $transition 100ms;
+    &:hover {
+      color: $accent-color;
+    }
+  }
+}
+
+.footer-social {
+  margin-left: 70px;
+  &__title {
+    @include text-filter(700, 14px, 16px, 0.03em);
+    margin-bottom: 20px;
+    color: $bright-color;
+  }
+}
+
+.footer-social-list {
+  @extend %flex-center;
+  gap: 10px;
+  &__icon {
+    @include width-height;
+    fill: $bright-color;
+  }
+  &__item {
+    @extend %flex-center;
+    @include width-height(44px, 44px);
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    transition: background-color $transition 100ms;
+    &:hover {
+      @extend %flex-center;
+      background: $accent-color;
+      border-radius: 50%;
+    }
+  }
+}
+
+.footer-info {
+  &__logo {
+    color: $bright-color;
+  }
+  &__address {
+    @include text-filter (400, 14px, 24px, 0.03em);
+    margin-bottom: 9px;
+    color: $bright-color;
+  }
+  &__web {
+    @include text-filter(700, 26px, 31px, 0.03em);
+    margin-bottom: 20px;
+    color: $accent-color;
+    font-family: "Raleway";
+  }
+}
+
+.footer-media {
+  margin-left: 93px;
+  &__text {
+    margin-bottom: 20px;
+    color: $bright-color;
+  }
+}
+
+.footer-media-form {
+  display: flex;
+  &__input {
+    @include width-height(358px, 50px);
+    margin-right: 10px;
+    background: $black-ground;
+    @include border(1px solid rgba(255, 255, 255, 0.3));
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  }
+  &__button {
+    @extend %flex-center;
+    @include width-height(200px, 50px);
+    @include text-filter(700, 16px, 30px);
+    @include border(none);
+    padding-left: 40px;
+    background: $accent-color;
+    color: $bright-color;
+    box-shadow: 0px 4px 4px $darker-rgba-color;
+  }
+  &__icon {
+    @include width-height(24px, 24px);
+    padding-left: 13px;
+    fill: $bright-color;
+  }
 }
