--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,76 +1,68 @@
 .header .container {
-  height: 80px;
-  width: 100%;
+  @include width-height(100%, 80px);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
+
+.header-line {
+  border: 1px solid $bit-bright;
 }
 
 .header-section {
   &__web {
     display: flex;
     justify-content: flex-end;
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 31px;
-    letter-spacing: 0.03em;
+    @include text-filter(700, 26px, 31px, 0.03em);
     color: $accent-color;
     margin-right: 93px;
+    font-family: "Raleway";
   }
   &__logo {
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 31px;
-    letter-spacing: 0.03em;
     color: $black-color;
   }
 }
 
+.header-active::after {
+  border-bottom: 4px solid $accent-color;
+  content: "";
+  display: block;
+  position: absolute;
+  @include width-height(100%, 26px);
+  left: 0;
+}
+
 .header-list {
+  @include width-height(0, 80px);
   display: flex;
-  justify-content: space-evenly;
-  height: 80px;
   &__item {
-    margin-left: 55px;
     padding-top: 32px;
+    margin-left: 55px;
+    margin-right: 13px;
     &:nth-child(2) {
       margin-left: 50px;
     }
-    &:nth-child(1) {
-      font-family: 'Roboto';
-      font-style: normal;
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 16px;
-      letter-spacing: 0.02em;
-      color: #212121;
-      border-bottom: 4px solid $accent-color;
-      }
-    }
+  }
   &__link {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.02em;
     color: #212121;
     transition: color 250ms $transition 25ms;
+    position: relative;
+    @include text-filter (500, 14px, 16px, 0.02em);
     &:hover {
       color: $accent-color;
     }
   }
-  &__links {
-    color: $accent-color;
+  &__bar {
+    border-bottom: 4px solid $accent-color;
+    margin-top: 2px;
+    display: block;
+    @include width-height(100%, 42px);
   }
 }
 
 .header-media__item:hover {
-  .header-media__icon, .header-media__contact {
+  .header-media__icon,
+  .header-media__contact {
     color: $accent-color;
     fill: $accent-color;
   }
@@ -81,23 +73,19 @@
 // }
 
 .header-media {
+  margin: 0 auto;
   display: flex;
-  margin-left: auto;
   align-items: center;
+  margin-right: 10px;
   &__item {
     height: 20px;
     display: flex;
-    justify-content: center;
   }
   &__contact {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.02em;
-    color: $header-contact;
+    @include text-filter (500, 14px, 16px, 0.02em);
+    color: $grey-color;
     transition: color 250ms $transition 50ms;
+    margin-right: 25px;
     &:hover {
       color: $accent-color;
     }
@@ -105,9 +93,9 @@
   &__icon {
     width: 20px;
     height: 18px;
-    fill: $grey-color;
+    margin-top: -2px;
     margin-right: 10px;
-    margin-left: 30px;
+    fill: $grey-color; 
     transition: fill 250ms $transition 50ms;
   }
 }
