--- a/sass/components/_poster.scss
+++ b/sass/components/_poster.scss
@@ -1,36 +1,43 @@
 .poster-list {
+  margin-bottom: 94px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
-}
-
-.poster-list__item {
-  width: 370px;
-  height: 404px;
-  margin: 15px;
-  border: 1px solid #EEEEEE;
-  cursor: pointer;
-}
-
-.poster-list__overlay {
-  position: relative;
-  display: flex;
-  align-items: center;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 28px;
-  transition: background-color 250ms cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
-}
-
-.poster-list__overlay-text {
-  text-align: center;
-  position: absolute;
-  color: #FFFFFF;
-  opacity: 0;
-  transition: color 250ms cubic-bezier(0.165, 0.84, 0.44, 1) 100ms;
+  gap: 15px;
+  &__item {
+    padding-bottom: 20px;
+    border: 1px solid $bright-color;
+    width: 370px;
+    cursor: pointer;
+    &:hover {
+      border: 1px solid $bright-color;
+      box-shadow: $large-rgba-color;
+    }
+  }
+  &__overlay {
+    position: relative;
+    display: flex;
+    align-items: center;
+    @include text-filter(400, 18px, 28px, 0);
+    transition: background-color 250ms $transition 100ms;
+  }
+  &__overlay-text {
+    text-align: center;
+    position: absolute;
+    color: $bright-color;
+    opacity: 0;
+    transition: color 250ms $transition 100ms;
+  }
+  &__text {
+    @include text-filter(700, 18px, 36px, 0.06em);
+    margin: 16px, none, 24, 24;
+    color: $color;
+  }
+  &__description {
+    @include text-filter(400, 16px, 30px, 0.03em);
+    color: $grey-color;
+  }
 }
 
 .poster-list__item:hover .poster-list__overlay {
@@ -43,32 +50,4 @@
 
 .poster-list__item:hover .poster-list__img {
   opacity: 0.1;
-}
-
-.poster-list__item:hover {
-  border: 1px solid #EEEEEE;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.poster-list__text {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 36px;
-  letter-spacing: 0.06em;
-  color: #212121;
-  margin: 0 24px;
-  margin-top: 16px;
-}
-
-.poster-list__description {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 30px;
-  letter-spacing: 0.03em;
-  color: #757575;
-  margin: 0 24px;
 }
