--- a/sass/components/_qualities.scss
+++ b/sass/components/_qualities.scss
@@ -15,11 +15,7 @@
 }
 
 .qualities-section .container {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
+  @extend %container-display-flexes;
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -31,36 +27,28 @@
     margin: 30px;
     &::before {
       content: "";
-      width: 270px;
-      height: 120px;
-      background: $qualities-background-color;
-      border-radius: 4px;
-      border: none;
-      display: block;
+      @include width-height(270px, 120px);
+      @include border(none);
       margin-bottom: 30px;
+      background: $background-color-bright;
+      display: block;
       background-repeat: no-repeat;
       background-position: center;
     }
   }
+  &__item {
+    margin: 20px;
+  }
   &__title {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: $qualities-color;
+    @include text-filter(700, 14px, 16px, 0.03em);
+    margin-bottom: 10px;
+    color: $color;
     display: flex;
     flex-direction: column;
+    text-transform: uppercase;
   }
   &__text {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 0.03em;
-    color: $header-contact;
+    @include text-filter;
+    color: $grey-color;
   }
 }
