--- a/sass/components/_poster.scss
+++ b/sass/components/_poster.scss
@@ -7,7 +7,7 @@
   gap: 15px;
   &__item {
     padding-bottom: 20px;
-    border: 1px solid $bright-color;
+    border: 1px solid $bright-grey;
     width: 370px;
     cursor: pointer;
     &:hover {
