--- a/sass/portfolio.css
+++ b/sass/portfolio.css
@@ -186,7 +186,7 @@ body {
 }
 .poster-list__item {
   padding-bottom: 20px;
-  border: 1px solid #FFFFFF;
+  border: 1px solid #EEEEEE;
   width: 370px;
   cursor: pointer;
 }
