--- a/sass/utilis/_variables.scss
+++ b/sass/utilis/_variables.scss
@@ -11,6 +11,7 @@ $color: #212121;
 $background-color-bright: #F5F4FA;
 $rain-color: #AFB1B8;
 $bit-bright: #ECECEC;
+$bright-grey: #EEEEEE;
 $black-ground: #2F303A;
 $rgba-color: rgba(47, 48, 58, 0.8);
 $rgba-colorless: rgba(47, 48, 58, 0.4);
