hero section, modal + qualities section adaptive

--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,33 +1,40 @@
 .hero-section {
-  @extend %container-display-flexes;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-image: linear-gradient(
     $rgba-colorless,
     $rgba-colorless
     ),
     url(../img/img-2/Img.jpg);
+    @media screen and (min-width: 1200px) {
+      padding-top: 200px;
+      padding-bottom: 200px;
+    }
   &__button {
     @include text-filter(700, 16px, 30px, 0);
     @include width-height(200px, 50px);
     @include border (2px, 5px);
-    margin-left: 500px;
+    display: block;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
     background-color: $background-color;
     color: $button-color;
     box-shadow: 2px 2px 2px 2px $box-shadow;
     transition: color 250ms $transition 25ms,
-      background-color 1s $transition 100ms;
+    background-color 1s $transition 100ms;
     &:hover {
       background-color: $accent-color;
       color: $bright-color;
     }
   }
   &__title {
-    @include text-filter(900, 44px, 60px, 0.06em);
+    @include text-filter(900, 26px, 42px, 0.06em);
     text-align: center;
     text-transform: uppercase;
-    justify-content: space-evenly;
-    display: flex;
     color: $bright-color;
+    @media screen and (min-width: 1200px) {
+      @include text-filter(900, 44px, 60px, 0.06em);
+    }
   }
 }
