--- a/sass/portfolio.css
+++ b/sass/portfolio.css
@@ -13,13 +13,33 @@ h1, h2, h3, h4, h5, h6, p {
   margin: 0;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+}
+
 .container {
-  width: 1200px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
   font-family: "Roboto";
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 body {
