--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -1,14 +1,18 @@
+.work-section .container {
+  @extend %container-display-flexes;
+  padding-top: 50px;
+  padding-bottom: 94px;
+  display: none;
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
+}
+
 .work-section__title {
   @include text-filter (700, 36px, 42px, 0.03em);
   margin-bottom: 50px;
   color: $color;
   text-align: center;
-}
-
-.work-section .container {
-  @extend %container-display-flexes;
-  padding-top: 50px;
-  padding-bottom: 94px;
 }
 
 .work-list {
@@ -41,10 +45,10 @@
       text-align: center;
       bottom: 3px;
       left: 0;
-      @include width-height(100%, 0);
       background: $bright-color;
       color: $bright-color;
       height: 70px;
+      @include width-height(100%, 0);
       @include text-filter(700, 0, 0, 0);
     }
 }
