--- a/sass/components/_qualities.scss
+++ b/sass/components/_qualities.scss
@@ -26,7 +26,10 @@
   flex-direction: row;
   flex-wrap: wrap;
   &__item {
-    width: 450px;
+    width: 100%;
+    @media screen and (min-width: 480px) {
+      width: 450px;
+    }
     @media screen and (min-width: 768px) {
       width: 354px;
     }
@@ -35,7 +38,7 @@
     }
     &::before {
       content: "";
-      @include width-height(450px, 120px);
+      @include width-height(100%, 120px);
       @include border(none);
       margin-bottom: 30px;
       background: $background-color-bright;
@@ -43,14 +46,7 @@
       background-repeat: no-repeat;
       background-position: center;
       @media screen and (min-width: 768px) {
-        width: 354px;
         display: flex;
-        flex-wrap: wrap;
-      }
-      @media screen and (min-width: 1200px) {
-        width: 270px;
-        display: flex;
-        flex-wrap: wrap;
       }
     }
   }
@@ -65,12 +61,5 @@
   &__text {
     @include text-filter;
     color: $grey-color;
-    width: 452px;
-    @media screen and (min-width: 768px) {
-      width: 354px;
-    }
-    @media screen and (min-width: 1200px) {
-      width: 270px;
-    }
   }
 }
