--- a/sass/main.css
+++ b/sass/main.css
@@ -419,7 +419,12 @@ body {
   flex-wrap: wrap;
 }
 .qualities-list__item {
-  width: 450px;
+  width: 100%;
+}
+@media screen and (min-width: 480px) {
+  .qualities-list__item {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 768px) {
   .qualities-list__item {
@@ -433,7 +438,7 @@ body {
 }
 .qualities-list__item::before {
   content: "";
-  width: 450px;
+  width: 100%;
   height: 120px;
   border: none;
   border-radius: 4px;
@@ -445,16 +450,7 @@ body {
 }
 @media screen and (min-width: 768px) {
   .qualities-list__item::before {
-    width: 354px;
     display: flex;
-    flex-wrap: wrap;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .qualities-list__item::before {
-    width: 270px;
-    display: flex;
-    flex-wrap: wrap;
   }
 }
 .qualities-list__title {
@@ -474,17 +470,6 @@ body {
   line-height: 24px;
   letter-spacing: 0.03em;
   color: #757575;
-  width: 452px;
-}
-@media screen and (min-width: 768px) {
-  .qualities-list__text {
-    width: 354px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .qualities-list__text {
-    width: 270px;
-  }
 }
 
 .work-section .container {
