--- a/sass/main.css
+++ b/sass/main.css
@@ -15,11 +15,12 @@ h1, h2, h3, h4, h5, h6, p {
 
 img {
   width: 100%;
-  height: 100%;
+  height: auto;
+  max-width: 100%;
+  display: block;
 }
 
 .container {
-  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
