--- a/sass/portfolio.css
+++ b/sass/portfolio.css
@@ -274,6 +274,15 @@ body {
   padding-top: 60px;
   padding-bottom: 60px;
   display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .footer-section .container {
+    flex-direction: row;
+  }
 }
 
 .footer-list__item {
@@ -291,8 +300,10 @@ body {
   color: #2196F3;
 }
 
-.footer-social {
-  margin-left: 70px;
+@media screen and (min-width: 1200px) {
+  .footer-social {
+    margin-left: 70px;
+  }
 }
 .footer-social__title {
   font-weight: 700;
@@ -344,8 +355,10 @@ body {
   font-family: "Raleway";
 }
 
-.footer-media {
-  margin-left: 93px;
+@media screen and (min-width: 1200px) {
+  .footer-media {
+    margin-left: 93px;
+  }
 }
 .footer-media__text {
   margin-bottom: 20px;
@@ -354,15 +367,22 @@ body {
 
 .footer-media-form {
   display: flex;
+  flex-wrap: wrap;
 }
 .footer-media-form__input {
-  width: 358px;
+  width: 450px;
   height: 50px;
   margin-right: 10px;
   background: #2F303A;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+}
+@media screen and (min-width: 1200px) {
+  .footer-media-form__input {
+    width: 358px;
+    height: 50px;
+  }
 }
 .footer-media-form__button {
   width: 200px;
