--- a/sass/main.css
+++ b/sass/main.css
@@ -801,6 +801,16 @@ body {
   border-radius: 50%;
 }
 
+@media screen and (min-width: 768px) {
+  .footer-info {
+    margin-right: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-info {
+    margin-right: 0;
+  }
+}
 .footer-info__logo {
   color: #FFFFFF;
 }
