--- a/sass/portfolio.css
+++ b/sass/portfolio.css
@@ -202,7 +202,6 @@ body {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: center;
   gap: 15px;
 }
 .poster-list__item {
@@ -350,6 +349,16 @@ body {
   border-radius: 50%;
 }
 
+@media screen and (min-width: 768px) {
+  .footer-info {
+    margin-right: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-info {
+    margin-right: 0;
+  }
+}
 .footer-info__logo {
   color: #FFFFFF;
 }
