--- a/sass/portfolio.css
+++ b/sass/portfolio.css
@@ -176,8 +176,14 @@ body {
 
 .buttons-list {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-wrap: wrap;
+  gap: 15px 8px;
+}
+@media screen and (min-width: 768px) {
+  .buttons-list {
+    justify-content: center;
+    gap: 0;
+  }
 }
 .buttons-list__items {
   font-weight: 500;
@@ -191,6 +197,14 @@ body {
   color: #212121;
   cursor: pointer;
   transition: color 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 50ms;
+}
+@media screen and (min-width: 768px) {
+  .buttons-list__items {
+    margin-bottom: 0;
+  }
+}
+.buttons-list__items:first-child {
+  margin-bottom: 15px;
 }
 .buttons-list__items:hover {
   background-color: #2196F3;
