--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -7,8 +7,12 @@
 
 .buttons-list {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-wrap: wrap;
+  gap: 15px 8px;
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+    gap: 0;
+  }
   &__items {
     @include text-filter(500, 16px, 30px, 0);
     @include border(none, 4px);
@@ -17,6 +21,12 @@
     color: $color;
     cursor: pointer;
     transition: color 250ms $transition 50ms;
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0;
+    }
+    &:first-child {
+      margin-bottom: 15px;
+    }
     &:hover {
       background-color: $accent-color;
       color: $bright-color;
