--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,8 +1,10 @@
 .header .container {
   @include width-height(100%, 80px);
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
+  @media screen and (min-width: 768px) {
+    justify-content: space-evenly;
+  }
 }
 
 .header-line {
@@ -34,12 +36,16 @@
 
 .header-list {
   @include width-height(0, 80px);
-  display: flex;
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
   &__item {
     padding-top: 32px;
-    margin-left: 55px;
-    margin-right: 13px;
-    &:nth-child(2) {
+    @media screen and (min-wdith: 1200px) {
+      margin-left: 55px;
+    }
+    &:not(:first-child) {
       margin-left: 50px;
     }
   }
@@ -67,16 +73,19 @@
     fill: $accent-color;
   }
 }
-// .header-media__item:hover .header-media__icon, .header-media__item:hover .header-media__contact {
-//   color: #2196F3;
-//   fill: #2196F3;
-// }
 
 .header-media {
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  margin-right: 10px;
+  margin-left: auto;
+  display: none;
+  gap: 10px;
+  flex-direction: column;
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+    display: flex;
+  }
   &__item {
     height: 20px;
     display: flex;
