--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -6,6 +6,7 @@
     url(../img/img-2/Img.jpg);
     padding-top: 118px;
     padding-bottom: 118px;
+    background-size: cover;
     @media screen and (min-width: 1200px) {
       padding-top: 200px;
       padding-bottom: 200px;
