--- a/sass/portfolio.css
+++ b/sass/portfolio.css
@@ -65,8 +65,12 @@ body {
   width: 100%;
   height: 80px;
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .header .container {
+    justify-content: space-evenly;
+  }
 }
 
 .header-line {
@@ -101,14 +105,22 @@ body {
 .header-list {
   width: 0;
   height: 80px;
-  display: flex;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .header-list {
+    display: flex;
+  }
 }
 .header-list__item {
   padding-top: 32px;
-  margin-left: 55px;
-  margin-right: 13px;
 }
-.header-list__item:nth-child(2) {
+@media screen and (min-wdith: 1200px) {
+  .header-list__item {
+    margin-left: 55px;
+  }
+}
+.header-list__item:not(:first-child) {
   margin-left: 50px;
 }
 .header-list__link {
@@ -138,10 +150,21 @@ body {
 }
 
 .header-media {
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  margin-right: 10px;
+  margin-left: auto;
+  display: none;
+  gap: 10px;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  .header-media {
+    display: flex;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-media {
+    flex-direction: row;
+    display: flex;
+  }
 }
 .header-media__item {
   height: 20px;
