--- a/sass/portfolio.css
+++ b/sass/portfolio.css
@@ -102,6 +102,85 @@ body {
   left: 0;
 }
 
+.header-modal {
+  display: block;
+  transition: all 0.3s ease-in-out;
+}
+.header-modal__items {
+  margin-bottom: 32px;
+}
+.header-modal__close {
+  display: block;
+  border: none;
+  background-color: transparent;
+  margin-left: auto;
+  margin-right: 20px;
+  cursor: pointer;
+}
+.header-modal__open {
+  border: none;
+  background-color: transparent;
+  margin-left: auto;
+  cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  .header-modal__open {
+    display: none;
+  }
+}
+.header-modal__icon {
+  display: flex;
+  transition: fill 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 25ms;
+  width: 24px;
+  height: 24px;
+}
+.header-modal__icon:hover {
+  fill: #188CE8;
+}
+.header-modal__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 47px;
+  letter-spacing: 0.02em;
+  color: #212121;
+  transition: color 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 25ms;
+}
+.header-modal__link:hover {
+  color: #188CE8;
+}
+
+.header-social {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 64px;
+  gap: 10px;
+}
+.header-social__item {
+  margin-bottom: 64px;
+}
+.header-social__link {
+  color: #2196F3;
+}
+
+.header-info__item {
+  margin-top: 32px;
+}
+.header-info__link {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.header-number {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+}
+
 .header-list {
   width: 0;
   height: 80px;
@@ -189,6 +268,25 @@ body {
   margin-right: 10px;
   fill: #757575;
   transition: fill 250ms cubic-bezier(0.39, 0.575, 0.565, 1) 50ms;
+}
+
+.header-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+  background-color: white;
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
 
 .buttons-section .container {
