portfolio header menu

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,6 +2,7 @@
   @include width-height(100%, 80px);
   display: flex;
   align-items: center;
+  border: #ECECEC 1px solid;
   @media screen and (min-width: 768px) {
     justify-content: space-evenly;
   }
